# todo-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  manpage.sh
src/: command_executors.rs  commands.rs  main.rs  search_paths.rs  version.rs
src/date/: mod.rs  parsing.rs  relative.rs
src/error/: mod.rs
src/list/: display_list.rs  format.rs  list_types.rs  mod.rs  save.rs  search.rs
src/output/: buffer.rs  color.rs  line.rs  mod.rs  segment.rs  style.rs
src/todo/: document.rs  format.rs  item.rs  list.rs  mod.rs  path.rs
