[package]
name = "todo-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
edition = "2024"
name = "todo"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = "4.5.48"
clap_complete = "4.5.60"

[build-dependencies]
clap = "4.5.48"
clap_complete = "4.5.60"
clap_mangen = "0.2.31"
