[package]
name = "todo-rs"
version = "0.3.3"
edition = "2024"
build = "build.rs"
license = "GPLv3"
readme = "README.md"
authors = ["Alex Solis <git@alexsol.is>"]
repository = "https://github.com/alextheperson/todo-rs/"
homepage = "https://github.com/alextheperson/todo-rs/"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = "4.5.48"

[build-dependencies]
clap = "4.5.48"
clap_complete = "4.5.60"
clap_mangen = "0.2.31"
